--- a/caption_extraction.ipynb
+++ b/caption_extraction.ipynb
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can notice, most of the words appear with frequency below 5000. Thus, we will select 1500 most frequent words to be included in our model."
+    "<i>As we can notice, most of the words appear with frequency below 5000. To obtain a more powerful model, it might be a better choice to focus on most important words, e.g. 1500 most frequent ones.</i>"
    ]
   },
   {
