--- a/image_extraction.ipynb
+++ b/image_extraction.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>The overall idea is to map for an image, each of the rgb values to features from ResNet50 model. We repeat the same procedure for all of the images. </i>"
+    "<i>The overall idea is to map rgb values of an images to features from ResNet50 model. We repeat the same procedure for all of the images. </i>"
    ]
   },
   {
